[package]
name = "fastping-rs"
version = "0.2.3"
authors = ["bparli <bparli@gmail.com>"]
license = "MIT"
homepage = "https://github.com/bparli/fastping-rs"
repository = "https://github.com/bparli/fastping-rs"
description = " ICMP ping library for quickly sending and measuring batches of ICMP ECHO REQUEST packets."
readme = "README.md"
edition = "2021"

[dependencies]
pnet = "0.28"
pnet_macros_support = "0.28"
log = "0.4"
rand = "0.8"
chrono = "0.4"
ctrlc = { version = "3.0", features = ["termination"] }

[dev-dependencies]


[[example]]
name = "ping"
