[package]
name = "pingmu"
version = "0.0.1"
authors = ["bparli <bparli@gmail.com>", "ostoe <linhaifly@163.com>"]
license = "MIT"
#homepage = "https://github.com/bparli/fastping-rs"
#repository = "https://github.com/bparli/fastping-rs"
#description = " ICMP ping library for quickly sending and measuring batches of ICMP ECHO REQUEST packets."
readme = "README.md"
edition = "2021"

[dependencies]
pnet = "0.28"
pnet_macros_support = "0.28"
log = "0.4"
rand = "0.8"
chrono = "0.4"
ctrlc = { version = "3.0", features = ["termination"] }
csv = "1.1"
prettytable-rs = "0.8.0"
ipnetwork = "0.18.0"

[dev-dependencies]

#
#[[example]]
#name = "ping"